Fixed sidebar horizontal scrollbar

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -2,7 +2,7 @@
   padding: 10px;
   max-height: none;
   height: calc(~'100% - 50px');
-  overflow-y: auto;
+
   background-color: #f5f5f5;
   .job {
     width: calc(~'100% - 5px');
